# file_manager

./: CHANGELOG.md  file-manager.cabal
app/: Main.hs
project_management/: notes.txt  todo.txt
src/: Display.hs  StateMan.hs  Temp.hs  Types.hs  UserInput.hs  Util.hs
